Fix modals on mobile

--- a/app/javascript/pawoo_music/components/music_compose/music_compose.scss
+++ b/app/javascript/pawoo_music/components/music_compose/music_compose.scss
@@ -37,8 +37,4 @@
       }
     }
   }
-
-  > .mobile {
-    padding: var(--padding40);
-  }
 }
